Lots of code cleanup, fixing tests